[tool.poetry]
name = "rubicon-market-maker"
version = "0.1.0"
description = ""
authors = ["bghughes <32072172+bghughes@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[tool.poetry.scripts]
main = "rubicon_market_maker.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
